config/networking/_ytt_lib/cf-k8s-networking/config/istio-config/app-sidecar.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: cf-workloads
spec:
  egress:
  - hosts:
    - "cf-system/*"
